--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <body>
-  <router-outlet></router-outlet>
 
+  <router-outlet></router-outlet>
+  <button class="btn btn-primary" type="button" (click)="numeroAleatorio()">RODAR DADO</button>
 </body>
 
-<app-dado></app-dado>
