--- a/src/app/elementos/dado/dado.component.html
+++ b/src/app/elementos/dado/dado.component.html
@@ -1,12 +1,5 @@
 
-<main>
-    <section>
-        <div id="dado">
-       
-            <h5>{{number}}</h5>
 
-        </div>
-    </section>
-
-</main>
-
+<body>
+    <button class="btn btn-primary" type="button" (click)="numeroAleatorio()">RODAR DADO</button>
+  </body>
