Función creada  - working in styles

--- a/src/app/elementos/dado/dado.component.html
+++ b/src/app/elementos/dado/dado.component.html
@@ -1,5 +1,3 @@
-
-
 <body>
-    <button class="btn btn-primary" type="button" (click)="numeroAleatorio()">RODAR DADO</button>
-  </body>
+    <button class="btn btn-primary text-center" type="button" (click)="numeroAleatorio()">Rodar Dado</button>
+</body>
