--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,14 @@
+<body>
 
 <main>
   <section>
       <div id="dado">
           <h5>{{number}}</h5>
+          
       </div>
   </section>
 </main>
 
 <app-dado [number]="number" (randomNumber)="number= $event"></app-dado>
+  
+</body>
