--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,16 +1,34 @@
 body {
-    background-color: black;
+    background-image: linear-gradient(to top, #49dacebb, #00c3d5c5, #00a8d7, #008cd0, #396ebc);
     height: 30em;
     margin: 50px;
     align-items: center;
+    box-shadow: 0px 0px 15px 8px  rgb(51, 53, 156);
+
 }
 
-main {
-    background-color: pink;
+section{
+
+    padding-top: 27px;
 }
 
+#dado {
+    background: linear-gradient(
+    130deg,
+    rgb(157, 214, 252),
+    rgb(51, 53, 156),
+    rgb(80, 138, 192)
+  );
+    border: dashed 2px white;
+    margin-left: 26em;
+    margin-right: 26em;
+    margin-top: 3em;
+    margin-bottom: 3em;
+    border-radius: 30px;
+
+}
 h5 {
-    font-size: 300px;
-    padding-top: 20px;
-color: aliceblue;
+    font-size: 230px;
+    padding-top:0px;
+    color: white;
 }
