--- a/src/app/elementos/dado/dado.component.html
+++ b/src/app/elementos/dado/dado.component.html
@@ -1,3 +1,3 @@
-<body>
-    <button class="btn btn-primary text-center" type="button" (click)="numeroAleatorio()">Rodar Dado</button>
-</body>
+<div id="container">
+<button class="btn btn-primary text-center" type="button" (click)="numeroAleatorio()">Rodar Dado</button>
+</div>
